--- a/database/数据库的隔离级别.md
+++ b/database/数据库的隔离级别.md
@@ -245,14 +245,17 @@ update user set age=11 where age=10
 
 假设现在表中有两条记录，并且 age 字段已经添加了索引，两条记录 age 的值分别为 10 和 30。
 
+![images](https://github.com/yellia1989/learn-doc/blob/master/database/images/f9.png)
 
 此时，在数据库中会为索引维护一套B+树，用来快速定位行记录。B+索引树是有序的，所以会把这张表的索引分割成几个区间。
 
+![images](https://github.com/yellia1989/learn-doc/blob/master/database/images/f10.jpeg)
 
 如图所示，分成了3 个区间，(负无穷,10]、(10,30]、(30,正无穷]，在这3个区间是可以加间隙锁的。
 
 之后，我用下面的两个事务演示一下加锁过程。
 
+![images](https://github.com/yellia1989/learn-doc/blob/master/database/images/f11.jpeg)
 
 在事务A提交之前，事务B的插入操作只能等待，这就是间隙锁起得作用。当事务A执行update user set name='风筝2号’ where age = 10; 的时候，由于条件 where age = 10 ，数据库不仅在 age =10 的行上添加了行锁，而且在这条记录的两边，也就是(负无穷,10]、(10,30]这两个区间加了间隙锁，从而导致事务B插入操作无法完成，只能等待事务A提交。不仅插入 age = 10 的记录需要等待事务A提交，age<10、10<age<30 的记录页无法完成，而大于等于30的记录则不受影响，这足以解决幻读问题了。
 
